--- a/package.json
+++ b/package.json
@@ -25,15 +25,19 @@
     "node": ">=21"
   },
   "scripts": {
+    "analyze": "cem analyze",
     "bundle": "npm run format:write && npm run package",
     "ci-test": "npx jest",
     "coverage": "npx make-coverage-badge --output-path ./badges/coverage.svg",
+    "docs": "npx typedoc --logLevel Warn",
     "format:write": "npx prettier --write .",
     "format:check": "npx prettier --check .",
+    "lint:lit-analyzer": "lit-analyzer --quiet",
     "lint": "npx eslint . -c ./.github/linters/.eslintrc.yml",
     "local-action": "npx local-action . src/main.ts .env",
     "package": "npx ncc build src/index.ts -o dist --source-map --license licenses.txt",
     "package:watch": "npm run package -- --watch",
+    "prettier": "prettier src --write --ignore-unknown",
     "test": "npx jest",
     "all": "npm run format:write && npm run lint && npm run test && npm run coverage && npm run package"
   },
@@ -73,6 +77,7 @@
     "parse-lcov": "^1.0.4"
   },
   "devDependencies": {
+    "@custom-elements-manifest/analyzer": "^0.10.3",
     "@github/local-action": "^2.2.0",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.14",
@@ -80,13 +85,14 @@
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
     "@vercel/ncc": "^0.38.3",
+    "custom-elements-manifest": "^2.1.0",
     "eslint": "^8.57.0",
     "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-jsonc": "^2.18.2",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
     "make-coverage-badge": "^1.2.0",
-    "prettier": "^3.3.3",
+    "prettier": "3.4.2",
     "prettier-eslint": "^16.3.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
