--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,8 +45,8 @@ jobs:
         id: npm-ci-test
         run: npm run ci-test
 
-  test-action:
-    name: GitHub Actions Test
+  web-components-code-quality:
+    name: Web Components Code Quality
     runs-on: ubuntu-latest
 
     steps:
@@ -54,8 +54,8 @@ jobs:
         id: checkout
         uses: actions/checkout@v4
 
-      - name: Test Local Action
-        id: test-action
+      - name: Code Quality
+        id: wc-code-quality
         uses: ./
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
