--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "eslint-plugin-jsonc": "^2.18.2",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
+    "lit-analyzer": "^2.0.3",
     "make-coverage-badge": "^1.2.0",
     "prettier": "3.4.2",
     "prettier-eslint": "^16.3.0",
