--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "prettier": "3.4.2",
     "prettier-eslint": "^16.3.0",
     "ts-jest": "^29.2.5",
+    "typedoc": "^0.27.3",
     "typescript": "^5.6.3"
   }
 }
