--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,9 @@
 name: CI - Pull Request
 
 on:
-  pull_request_target:
+  pull_request:
+    branches:
+      - main
 
 permissions:
   contents: write
