--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,10 @@
       "cwd": "${workspaceRoot}",
       "args": ["local-action", ".", "src/main.ts", ".env"],
       "console": "integratedTerminal",
-      "skipFiles": ["<node_internals>/**", "node_modules/**"]
+      "skipFiles": ["<node_internals>/**", "node_modules/**"],
+      "env": {
+        "NODE_OPTIONS": "--experimental-specifier-resolution=node"
+      }
     }
   ]
 }
