--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
+    "actions-toolkit": "^6.0.1",
+    "minimist": "^1.2.8",
     "parse-lcov": "^1.0.4"
   },
   "devDependencies": {
@@ -81,6 +83,7 @@
     "@github/local-action": "^2.2.0",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.14",
+    "@types/minimist": "^1.2.5",
     "@types/node": "^22.10.1",
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
@@ -95,6 +98,7 @@
     "make-coverage-badge": "^1.2.0",
     "prettier": "3.4.2",
     "prettier-eslint": "^16.3.0",
+    "quibble": "^0.9.2",
     "ts-jest": "^29.2.5",
     "typedoc": "^0.27.3",
     "typescript": "^5.6.3"
