--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
           node-version-file: .node-version
           cache: npm
 
+      - name: Setup and Bundle
+        run: npm run setup
+
       - name: Code Quality
         uses: ./
         with:
