--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "node": ">=21"
   },
   "scripts": {
-    "setup": "npm ci && npm run bundle",
+    "setup": "npm i && npm run bundle",
     "analyze": "cem analyze",
     "bundle": "npm run format:write && npm run package",
     "ci-test": "npx jest",
@@ -77,6 +77,7 @@
     "@actions/github": "^6.0.0",
     "actions-toolkit": "^6.0.1",
     "minimist": "^1.2.8",
+    "octokit": "^4.0.2",
     "parse-lcov": "^1.0.4",
     "undici-types": "^7.1.0"
   },
