--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,12 +7,13 @@
       "request": "launch",
       "runtimeExecutable": "npx",
       "cwd": "${workspaceRoot}",
-      "args": ["local-action", ".", "src/main.ts", ".env"],
+      "args": ["local-action", ".", "src/main.ts", ".env", "-- --local"],
       "console": "integratedTerminal",
       "skipFiles": ["<node_internals>/**", "node_modules/**"],
       "env": {
         "NODE_OPTIONS": "--experimental-specifier-resolution=node"
-      }
+      },
+      "preLaunchTask": "npm: install"
     }
   ]
 }
