--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
     "@vercel/ncc": "^0.38.3",
+    "@web/dev-server-esbuild": "^1.0.3",
     "custom-elements-manifest": "^2.1.0",
     "eslint": "^8.57.0",
     "eslint-plugin-jest": "^28.9.0",
