used xml-js package

--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "minimist": "^1.2.8",
     "octokit": "^4.0.2",
     "parse-lcov": "^1.0.4",
-    "undici-types": "^7.1.0"
+    "undici-types": "^7.1.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.10.3",
