--- a/action.yml
+++ b/action.yml
@@ -1,23 +1,77 @@
-name: 'The name of your action here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: "Web Components Code Quality"
+description:
+  "This action is designed to format and test Web Component repositories on pull
+  requests. It helps ensure that your code meets the required quality standards."
+author: "Zebra Technologies"
 
 # Add your action's branding here. This will appear on the GitHub Marketplace.
 branding:
-  icon: 'heart'
-  color: 'red'
+  icon: compass
+  color: "blue"
 
 # Define your inputs here.
 inputs:
-  milliseconds:
-    description: 'Your input description here'
+  token:
+    description: "Token used for pushing fixes and commenting on PRs"
     required: true
-    default: '1000'
+
+  working-directory:
+    description: "The working directory"
+    required: false
+    default: "."
+
+  web-components-src:
+    description: "The path to the directory containing the web components source code"
+    required: false
+    default: "src/**/*.{ts,tsx}"
+
+  test-src:
+    description: "The path to the directory containing the test source code"
+    required: false
+    default: "src/test/**/*.test.ts"
+
+  test-results-path:
+    description: "The path to the test results file"
+    required: false
+    default: "./test-results.xml"
+
+  coverage-path:
+    description: "The path to the coverage file"
+    required: false
+    default: "coverage/lcov.info"
+
+  run-static-analysis:
+    description: "Whether to run static analysis"
+    required: false
+    default: "true"
+
+  run-code-formatting:
+    description: "Whether to run code formatting"
+    required: false
+    default: "true"
+
+  run-tests:
+    description: "Whether to run tests"
+    required: false
+    default: "true"
+
+  run-coverage:
+    description: "Whether to run coverage"
+    required: false
+    default: "true"
+
+  create-comment:
+    description: "Whether to create a comment on the PR"
+    required: false
+    default: "true"
+
+  coverage-pass-score:
+    description: "The minimum coverage score required to pass"
+    required: false
+    default: "80"
 
 # Define your outputs here.
-outputs:
-  time:
-    description: 'Your output description here'
+# outputs:
 
 runs:
   using: node20
