--- a/package.json
+++ b/package.json
@@ -73,13 +73,12 @@
   },
   "dependencies": {
     "@actions/core": "^1.11.1",
+    "@actions/exec": "^1.1.1",
     "@actions/github": "^6.0.1",
-    "@playwright/test": "^1.51.1",
-    "actions-toolkit": "^6.0.1",
+    "@playwright/test": "^1.54.1",
     "minimist": "^1.2.8",
     "octokit": "^4.1.2",
     "parse-lcov": "^1.0.4",
-    "undici-types": "^7.8.0",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
@@ -89,21 +88,19 @@
     "@types/jest": "^29.5.14",
     "@types/minimist": "^1.2.5",
     "@types/node": "^22.14.0",
-    "@typescript-eslint/eslint-plugin": "^8.34.1",
-    "@typescript-eslint/parser": "^8.29.1",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
     "@vercel/ncc": "^0.38.3",
     "@web/dev-server-esbuild": "^1.0.4",
     "custom-elements-manifest": "^2.1.0",
-    "eslint": "^9.29.0",
+    "eslint": "^9.31.0",
     "eslint-plugin-jest": "^28.11.0",
-    "eslint-plugin-jsonc": "^2.20.1",
     "eslint-plugin-prettier": "^5.5.0",
     "jest": "^29.7.0",
     "lit-analyzer": "^2.0.3",
     "make-coverage-badge": "^1.2.0",
-    "prettier": "3.6.0",
+    "prettier": "3.6.2",
     "prettier-eslint": "^16.4.2",
-    "quibble": "^0.9.2",
     "ts-jest": "^29.4.0",
     "typedoc": "^0.28.5",
     "typescript": "^5.8.3"
