--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "format:write": "npx prettier --write .",
     "format:check": "npx prettier --check .",
     "lint:lit-analyzer": "lit-analyzer --quiet",
-    "lint": "npx eslint . -c ./.github/linters/.eslintrc.yml",
+    "lint": "npx eslint .",
     "local-action": "npx local-action . src/main.ts .env",
     "package": "npx ncc build src/index.ts -o dist --source-map --license licenses.txt",
     "package:watch": "npm run package -- --watch",
@@ -83,7 +83,7 @@
   },
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.10.4",
-    "@github/local-action": "^5.1.0",
+    "@github/local-action": "^2.2.1",
     "@jest/globals": "^30.0.5",
     "@types/jest": "^30.0.0",
     "@types/minimist": "^1.2.5",
